[gd_scene load_steps=6 format=3 uid="uid://bx7re81noljwh"]

[ext_resource type="Script" uid="uid://bmptslhxomwlh" path="res://sceny/player.gd" id="1_6b8q1"]
[ext_resource type="Texture2D" uid="uid://0ishtn1wlx5w" path="res://assety/tekstury/dev/Green/texture_01.png" id="1_d6lse"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a321r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6b8q1"]
albedo_texture = ExtResource("1_d6lse")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ovlec"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_6b8q1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_a321r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
material_override = SubResource("StandardMaterial3D_6b8q1")
mesh = SubResource("CapsuleMesh_ovlec")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Throwing_point" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02467227, 0.02778244, -0.40640914)

[node name="Throw_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Throw_timer" to="." method="_on_thow_timer_timeout"]
[connection signal="timeout" from="Throw_timer" to="." method="_on_throw_timer_timeout"]
